--- a/package.json
+++ b/package.json
@@ -1,5 +1,25 @@
 {
+  "name": "amireynoso",
+  "description": "Ami Reynoso's personal portfolio.",
+  "version": "1.0.1",
   "private": true,
+  "scripts": {
+    "build": "gulp build",
+    "deploy": "gulp deploy"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/amireynoso/amireynoso.git"
+  },
+  "keywords": [
+    "portfolio"
+  ],
+  "author": "Ami Reynoso",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/amireynoso/amireynoso/issues"
+  },
+  "homepage": "https://github.com/amireynoso/amireynoso#readme",
   "engines": {
     "node": ">=0.10.0"
   },
@@ -10,6 +30,7 @@
     "gulp": "^3.6.0",
     "gulp-cache": "^0.2.2",
     "gulp-csso": "^0.2.6",
+    "gulp-gh-pages": "^0.5.4",
     "gulp-if": "^1.2.1",
     "gulp-imagemin": "^2.0.0",
     "gulp-jshint": "^1.5.3",
@@ -17,7 +38,7 @@
     "gulp-minify-html": "^0.1.6",
     "gulp-nunjucks-render": "^0.2.1",
     "gulp-postcss": "^3.0.0",
-    "gulp-sass": "^1.3.3",
+    "gulp-sass": "^2.3.2",
     "gulp-size": "^1.1.0",
     "gulp-sourcemaps": "^1.3.0",
     "gulp-uglify": "^1.0.1",
