--- a/package.json
+++ b/package.json
@@ -1,4 +1,13 @@
 {
+  "name": "portfolio",
+  "version": "2.0.0",
+  "author": "Ami Reynoso <amireynoso@gmail.com>",
+  "scripts": {
+    "tailwind": "tailwindcss -i ./src/styles.css -o ./dist/styles.css",
+    "dist": "cp ./src/[!styles]* ./dist",
+    "prettier": "prettier --write dist/",
+    "build": "npm run tailwind && npm run dist && npm run prettier"
+  },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
     "prettier": "^2.8.8",
